--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,13 +449,14 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
+  max-width: 100%;
   height: 90vh;
   background: url("../img/hero-bg.jpg") top center;
   
   background-size: cover;
   margin-bottom: -200px;
 }
+
 
 #hero .container {
   position: relative;
@@ -1732,4 +1733,16 @@ section {
   background: #1c84e3;
   color: #fff;
   text-decoration: none;
+}
+@media screen and (max-width: 700px) {
+
+  #hero {
+    max-width: 100%;
+    height: 90vh;
+    background-repeat: no-repeat;
+    background: url("../img/heroback.png") top center;
+  
+  }
+     
+  
 }
