--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1734,15 +1734,17 @@ section {
   color: #fff;
   text-decoration: none;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
 
   #hero {
     max-width: 100%;
     height: 90vh;
-    background-repeat: no-repeat;
-    background: url("../img/heroback.png") top center;
+    
+    background: url("../img/hero-bg.jpg") top center;
+    
+    
   
   }
-     
+
   
-}
+}  
